[gd_scene load_steps=3 format=2]

[ext_resource path="res://Grid.gd" type="Script" id=1]
[ext_resource path="res://FillTimer.gd" type="Script" id=2]

[node name="Grid" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="ClickTimer" type="Timer" parent="."]
one_shot = true

[node name="FillTimer" type="Timer" parent="."]
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "Label"
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ClickTimer" to="." method="_on_ClickTimer_timeout"]
